# OTColorTransfer

./: AUTHORS  CMakeLists.txt  LICENSE  README.md  colorTransfer.cpp  colorTransferGPU.cpp  colorTransferGPUv0.cpp  colorTransferPartial.cpp  mkdocs.yml  ndTransfer.cpp
.github/: FUNDING.yml
.github/workflows/: ccpp.yml
docs/: 404.html  index.html  paper.bib  sitemap.xml
docs-source/: Changelog.md  Contributing.md  index.md  license.md  nd.md  original.md  partial.md  python.md
docs/Changelog/: index.html
docs/Contributing/: index.html
docs/license/: index.html
docs/nd/: index.html
docs/original/: index.html
docs/partial/: index.html
docs/python/: index.html
docs/search/: search_index.json
docs/todo/: index.html
docs/unbalanced/: index.html
